--- a/img-compress.html
+++ b/img-compress.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Image Compression Tool - Optimize Your Images Online">
-    <meta name="keywords" content="image compression, image optimizer, online tool">
-    <meta name="author" content="Your Name">
+    <meta name="keywords" content="image compression, image optimizer, online tool, compress image online,free image compres,free imge size reducer">
+    <meta name="author" content="Techtalkwithfazi">
     <title>Image Compression Tool</title>
     <style>
         body {
