--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
             <p>We offer a variety of online tools to help you save time and get things done efficiently. Our tools are fast, easy to use, and accessible from any device.</p>
 
             <!-- Image Compression Tool Card with Hyperlink -->
-            <a href="/img-compress.html" class="tool-card">
+            <a href="/Tool/img-compress.html" class="tool-card">
                 <div class="tool-title">Image Compression Tool</div>
                 <div class="tool-description">Compress your images to save space without losing quality. Upload an image, select your compression level, and get a faster, optimized version.</div>
             </a>
 
             <!-- Hidden Form for Image Compression Tool -->
-            <div id="/img-compress.html" class="tool-card">
+            <div id="/Tool/img-compress.html="tool-card">
                 <button class="upload-btn" onclick="document.getElementById('file-upload').click()">Upload Image</button>
                 <input type="file" id="file-upload" accept="image/*" style="display: none;" onchange="previewImage(event)">
                 <div class="compression-level">
